Enhance message handling
Signed-off-by: andreadimaio <dmaio.andrea@gmail.com>